--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "bootstrap": "3.3.7",
     "react": "16.3.2",
     "react-bootstrap": "0.32.1",
     "react-dom": "16.3.2",
